// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RC-CHR-6.2 — the same sheet body on every route, differing only by capability > snapshot: /characters/:id 1`] = `
{
  "combat participant": [
    "abilities",
    "attacks",
    "equipment",
    "bio",
    "combat",
    "spellcasting",
    "identity",
    "backstory",
    "reference",
    "tags",
    "resources",
    "death-saves",
    "prepared-spells",
    "journal",
    "history",
  ],
  "dm": [
    "abilities",
    "attacks",
    "equipment",
    "bio",
    "combat",
    "spellcasting",
    "identity",
    "backstory",
    "reference",
    "tags",
    "sharing",
    "resources",
    "death-saves",
    "rest",
    "prepared-spells",
    "xp",
    "level-up",
    "journal",
    "history",
  ],
  "owner": [
    "abilities",
    "attacks",
    "equipment",
    "bio",
    "combat",
    "spellcasting",
    "identity",
    "backstory",
    "reference",
    "tags",
    "resources",
    "death-saves",
    "rest",
    "prepared-spells",
    "xp",
    "level-up",
    "journal",
    "history",
  ],
  "read-only preview": [
    "abilities",
    "attacks",
    "equipment",
    "bio",
    "combat",
    "spellcasting",
    "identity",
    "backstory",
    "reference",
    "tags",
    "resources",
    "death-saves",
    "prepared-spells",
    "journal",
    "history",
  ],
}
`;

exports[`RC-CHR-6.2 — the same sheet body on every route, differing only by capability > snapshot: /player 1`] = `
{
  "combat participant": [
    "abilities",
    "attacks",
    "equipment",
    "bio",
    "combat",
    "spellcasting",
    "identity",
    "backstory",
    "reference",
    "tags",
    "resources",
    "death-saves",
    "prepared-spells",
    "journal",
    "history",
  ],
  "dm": [
    "abilities",
    "attacks",
    "equipment",
    "bio",
    "combat",
    "spellcasting",
    "identity",
    "backstory",
    "reference",
    "tags",
    "sharing",
    "resources",
    "death-saves",
    "rest",
    "prepared-spells",
    "xp",
    "level-up",
    "journal",
    "history",
  ],
  "owner": [
    "abilities",
    "attacks",
    "equipment",
    "bio",
    "combat",
    "spellcasting",
    "identity",
    "backstory",
    "reference",
    "tags",
    "resources",
    "death-saves",
    "rest",
    "prepared-spells",
    "xp",
    "level-up",
    "journal",
    "history",
  ],
  "read-only preview": [
    "abilities",
    "attacks",
    "equipment",
    "bio",
    "combat",
    "spellcasting",
    "identity",
    "backstory",
    "reference",
    "tags",
    "resources",
    "death-saves",
    "prepared-spells",
    "journal",
    "history",
  ],
}
`;

exports[`RC-CHR-6.2 — the same sheet body on every route, differing only by capability > snapshot: companion 1`] = `
{
  "combat participant": [
    "abilities",
    "attacks",
    "equipment",
    "bio",
    "combat",
    "spellcasting",
    "identity",
    "backstory",
    "reference",
    "tags",
    "resources",
    "death-saves",
    "prepared-spells",
    "journal",
    "history",
  ],
  "owner": [
    "abilities",
    "attacks",
    "equipment",
    "bio",
    "combat",
    "spellcasting",
    "identity",
    "backstory",
    "reference",
    "tags",
    "resources",
    "death-saves",
    "rest",
    "prepared-spells",
    "xp",
    "level-up",
    "journal",
    "history",
  ],
  "read-only preview": [
    "abilities",
    "attacks",
    "equipment",
    "bio",
    "combat",
    "spellcasting",
    "identity",
    "backstory",
    "reference",
    "tags",
    "resources",
    "death-saves",
    "prepared-spells",
    "journal",
    "history",
  ],
}
`;

exports[`RC-CHR-6.2 — the same sheet body on every route, differing only by capability > snapshot: joined companion 1`] = `
{
  "combat participant": [
    "abilities",
    "attacks",
    "equipment",
    "bio",
    "combat",
    "spellcasting",
    "identity",
    "backstory",
    "reference",
    "tags",
    "resources",
    "death-saves",
    "prepared-spells",
    "journal",
    "history",
  ],
  "owner": [
    "abilities",
    "attacks",
    "equipment",
    "bio",
    "combat",
    "spellcasting",
    "identity",
    "backstory",
    "reference",
    "tags",
    "resources",
    "death-saves",
    "rest",
    "prepared-spells",
    "xp",
    "level-up",
    "journal",
    "history",
  ],
}
`;
